Rename environment variables to avoid conflicts
- Changed DATABRICKS_HOST to GENIE_DATABRICKS_HOST
- Changed DATABRICKS_TOKEN to GENIE_DATABRICKS_TOKEN
- Updated all configuration files, documentation, and tests
- Added Databricks SDK compatibility layer for robust error handling
- Updated app.yaml to use secrets instead of hardcoded values
- Prevents conflicts with existing Databricks environment variables

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@
 # Web Framework
 Flask==2.3.3
 Flask-CORS==4.0.0
+gunicorn==21.2.0
 
 # Databricks Integration
-databricks-sdk==0.8.0
+databricks-sdk>=0.8.0,<1.0.0
 
 # Azure OpenAI Integration
 openai==0.28.1
