--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ gunicorn==21.2.0
 databricks-sdk>=0.8.0,<1.0.0
 
 # Azure OpenAI Integration
-openai==0.28.1
+openai>=1.0.0,<2.0.0
 
 # Configuration Management
 pydantic==2.4.2
